Update login & register endpoit
