# lib/presentation/schemes/requests/login_request.go
@@ -1,6 +1,6 @@
 package requests
 
 type LoginRequest struct {
-	Username string `json:"username" example:"dwikurnaitom"`
+	Email    string `json:"email" example:"dwikurnaito.mulyadien@gmail.com"`
 	Password string `json:"password" example:"123456"`
 }
